fixed overflow issue

--- a/src/stylesheets/components/_hero-section.scss
+++ b/src/stylesheets/components/_hero-section.scss
@@ -1,4 +1,6 @@
 .hero {
+  overflow: hidden;
+  padding-bottom: 100px;
   position: relative;
 
   .hero__bg {
@@ -105,7 +107,7 @@
 
     @include breakpoint('large') {
       @include center-element;
-      bottom: -100px;
+      bottom: 0px;
       font-size: $font-size-larger;
       line-height: 1.75;
       padding: 70px 110px;
@@ -124,7 +126,7 @@
       @include breakpoint('large') {
         height: 249px;
         right: -175px;
-        top: 77px;
+        top: 68px;
         width: 267px;
       }
     }
