--- a/src/stylesheets/components/_intro-section.scss
+++ b/src/stylesheets/components/_intro-section.scss
@@ -3,18 +3,14 @@
     padding-bottom: 60px;
 
     @include breakpoint('large') {
-      padding-top: 176px;
+      padding-top: 76px;
     }
   }
 
   hr {
     content: url("../images/x.png");
     border: none;
-    margin: 35px auto;
-
-    @include breakpoint('large') {
-      margin: 50px auto;
-    }
+    margin: 50px auto;
   }
 
   .intro__leadin {
